nearest/tests/compile-fail/derive_non_flat_field.stderr
error[E0277]: the trait bound `String: Flat` is not satisfied
 --> tests/compile-fail/derive_non_flat_field.rs:5:10
  |
5 | #[derive(Flat)]
  |          ^^^^ the trait `Flat` is not implemented for `String`
  |
  = help: the following other types implement trait `Flat`:
            (A, B)
            Bad
            Infallible
            Near<T>
            NearList<T>
            Option<T>
            [T; N]
            bool
          and $N others
  = help: see issue #48214
  = note: this error originates in the derive macro `Flat` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
  |
3 + #![feature(trivial_bounds)]
  |
